--- a/src/python/templates/site_results.html
+++ b/src/python/templates/site_results.html
@@ -41,7 +41,7 @@
                     {# don't show the current site #}
                     {% if s.key != site.key %}
                     <li>
-                        <img src="{{ SETTINGS.APP_URL_ROOT }}media/logos/{{ s.key }}.png" alt="{{ s.name }} logo" />
+                        <img src="{{ SETTINGS.APP_URL_ROOT }}media/logos/{{ s.key }}.png" alt="{{ s.name }} logo" width=50 height=50 />
                         <h6>
                             <a href="{{ SETTINGS.APP_URL_ROOT }}{{ s.key }}/search?q={{ query }}&amp;s={{ sort_by }}">{{ s.name }}</a>
                             <small class="tagline">{{ s.dump_date }}</small>
